--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,53 @@
-.container {
-  padding: 0 2rem;
+.main {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+.video {
+  position: absolute;
+  height: 250px;
+  object-fit: cover;
+  overflow: hidden;
+  width: 100%;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.container {
+  padding: 0 2rem;
+  position: relative;
+}
+
+.title {
+  color: var(--color-contrast);
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin-bottom: 0;
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.profile {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2rem;
+  margin-top: 0.5rem;
 }
 
-.footer {
+.imageProfile {
+  aspect-ratio: 1 / 1;
+  border-radius: 50%;
+  box-shadow: 0px 4px 7px 4px var(--color-shadows, rgba(117, 117, 117, 0.25));
+  height: 130px;
+  overflow: hidden;
+  position: relative;
+  width: 130px;
+}
+
+.social {
+  color: var(--color-primary);
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  gap: 0.5rem;
   justify-content: center;
   align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+  margin-top: 1rem;
 }
