--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,6 +11,7 @@
 }
 
 .section {
+  margin-top: 1rem;
   padding: 0 2rem;
   position: relative;
 }
@@ -65,4 +66,19 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+}
+
+.steps {
+  margin-top: 1rem;
+}
+
+.education {
+  display: grid;
+  grid-template-columns: 16px 1fr;
+  gap: 0.55rem 1rem;
+}
+
+.education h4,
+.education p {
+  margin-bottom: 0;
 }
